[package]
name = "yrs-client"
version = "0.1.0"
edition = "2021"
description = "Yrs test client"
license = "MIT"
authors = ["Carlos Herrero"]

[dependencies]
lib0 = "0.13"
yrs = "0.13"
y-sync = "0.1"
url = "2.2.2"
tungstenite = "0.16.0"
yrs-warp = "0.3"
warp = "0.3"
tokio = { version = "1.20", features = ["full"] }
